[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/scene.gd" type="Script" id=1]
[ext_resource path="res://shaders/menu.shader" type="Shader" id=2]
[ext_resource path="res://menubg/a11_g1.png" type="Texture" id=3]
[ext_resource path="res://menubg/b1.png" type="Texture" id=4]
[ext_resource path="res://scripts/menu/menubg.gd" type="Script" id=5]
[ext_resource path="res://scripts/fbo_self.gd" type="Script" id=6]
[ext_resource path="res://shaders/menu_final.shader" type="Shader" id=7]
[ext_resource path="res://scripts/menu/menu.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/iTime = null
shader_param/scale_v = null
shader_param/iFrame = null
shader_param/iMouse = Vector3( 1, 1, 0 )
shader_param/iChannel1 = ExtResource( 3 )
shader_param/iChannel2 = ExtResource( 4 )

[sub_resource type="ImageTexture" id=2]
size = Vector2( 1280, 720 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("menu_bg")

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("menu_bg")

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/iTime = null
shader_param/scale_v = null
shader_param/iFrame = null
shader_param/b2d = null
shader_param/b1d = null
shader_param/play_timer = null
shader_param/iMouse = Vector3( 1, 0, 0 )
shader_param/iChannel0 = SubResource( 4 )

[sub_resource type="ImageTexture" id=6]
size = Vector2( 1280, 720 )

[node name="scene" type="Node2D"]
script = ExtResource( 1 )

[node name="menu_bg" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="menu_bg"]
material = SubResource( 1 )
texture = SubResource( 2 )
centered = false
script = ExtResource( 5 )

[node name="menu_bg_buf" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="menu_bg_buf"]
texture = SubResource( 3 )
centered = false

[node name="fbo_self" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="menu" type="Sprite" parent="."]
material = SubResource( 5 )
texture = SubResource( 6 )
centered = false
script = ExtResource( 8 )

[node name="Control" type="Control" parent="menu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="b1" type="TextureButton" parent="menu/Control"]
margin_left = 156.0
margin_top = 80.0
margin_right = 360.0
margin_bottom = 279.0

[node name="b2" type="TextureButton" parent="menu/Control"]
margin_left = 316.0
margin_top = 349.0
margin_right = 628.0
margin_bottom = 683.0

[node name="b3" type="TextureButton" parent="menu/Control"]
margin_left = 971.0
margin_top = 622.0
margin_right = 1197.0
margin_bottom = 701.0
rect_rotation = -30.0

[connection signal="mouse_entered" from="menu/Control/b1" to="menu" method="_on_b1_mouse_entered"]
[connection signal="mouse_exited" from="menu/Control/b1" to="menu" method="_on_b1_mouse_exited"]
[connection signal="pressed" from="menu/Control/b1" to="menu" method="_on_b1_pressed"]
[connection signal="button_down" from="menu/Control/b2" to="menu" method="_on_b2_button_down"]
[connection signal="button_up" from="menu/Control/b2" to="menu" method="_on_b2_button_up"]
[connection signal="mouse_entered" from="menu/Control/b2" to="menu" method="_on_b2_mouse_entered"]
[connection signal="mouse_exited" from="menu/Control/b2" to="menu" method="_on_b2_mouse_exited"]
[connection signal="mouse_entered" from="menu/Control/b3" to="menu" method="_on_b3_mouse_entered"]
[connection signal="mouse_exited" from="menu/Control/b3" to="menu" method="_on_b3_mouse_exited"]
[connection signal="pressed" from="menu/Control/b3" to="menu" method="_on_b3_pressed"]
